Updated README, JavaDoc finalized, small fixes